feat: suppress import writes for process definitions with delete job records
(cherry picked from commit eca3f3bd09dd3d07698b93da188691c855d974b1)